# eshkol-jupyter-kernel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
docs/: RELEASING.md
examples/: hello_eshkol.ipynb
scripts/: fetch_eshkol_release.py  validate_release.py
src/eshkol_kernel/: __init__.py  __main__.py  completion.py  display.py  doctor.py  fetch_runtime.py  forms.py  install.py  kernel.py  lexer.py  session.py  setup.py
tests/: fake_eshkol_repl.py  jupyter_helpers.py  test_completion.py  test_display.py  test_doctor.py  test_fetch_runtime.py  test_forms.py  test_install.py  test_jupyter_integration.py  test_kernel.py  test_lexer.py  test_notebook_execution.py  test_real_eshkol.py  test_session.py  test_setup.py  test_validate_release.py  test_version.py
