[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "eshkol-kernel"
version = "0.1.0a4"
description = "A Jupyter kernel for Eshkol backed by eshkol-repl."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Gabriel Kahen" }
]
keywords = ["eshkol", "jupyter", "kernel", "notebook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Interpreters",
]
dependencies = [
  "ipykernel>=6.29",
  "jupyter-client>=8.6",
  "jupyter-core>=5.7",
  "pexpect>=4.9; platform_system != 'Windows'",
  "Pygments>=2.14",
]

[project.optional-dependencies]
test = [
  "nbclient>=0.10",
  "nbformat>=5.10",
  "pytest>=8.0",
]
dev = [
  "build>=1.2",
  "ruff>=0.8",
  "twine>=6.0",
]

[project.scripts]
eshkol-kernel-install = "eshkol_kernel.install:main"
eshkol-kernel-fetch-runtime = "eshkol_kernel.fetch_runtime:main"
eshkol-kernel-doctor = "eshkol_kernel.doctor:main"
eshkol-kernel-setup = "eshkol_kernel.setup:main"

[project.entry-points."pygments.lexers"]
eshkol = "eshkol_kernel.lexer:EshkolLexer"

[project.urls]
Homepage = "https://github.com/Gabriel-Kahen/eshkol-jupyter-kernel"
Repository = "https://github.com/Gabriel-Kahen/eshkol-jupyter-kernel"
Issues = "https://github.com/Gabriel-Kahen/eshkol-jupyter-kernel/issues"
Changelog = "https://github.com/Gabriel-Kahen/eshkol-jupyter-kernel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/eshkol_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP007"]
